--- a/src/styles/endGame.module.css
+++ b/src/styles/endGame.module.css
@@ -3,7 +3,7 @@
     text-align: center;
     margin: 20px 0;
     font-size: large;
-    color: #433466;   
+    color: #d17739;   
     opacity: 0;
     animation: opacity 0.5s forwards; 
 }
